--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.11",
+    "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.25.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
